Fixed spacing between employer tech & icon

--- a/scotty/static/components/employer-profile/employer-profile.less
+++ b/scotty/static/components/employer-profile/employer-profile.less
@@ -22,4 +22,8 @@
   text-angular + .buttons-wrap {
     margin-top: 10px;
   }
+
+  .skills-item i {
+    margin-right: @generic-padding-small;
+  }
 }
